# dianac

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: tests.yaml
examples/: FIBONACCI.DIA  TEST.DIA  fibonacci.dcl
src/: analyzer.rs  assembler.rs  character_encoding.rs  diagnostic.rs  errors.rs  instruction.rs  interface.rs  ir.rs  lexer.rs  main.rs  parser.rs  span.rs  tokens.rs  utils.rs
src/compilation/: analyzer.rs  assembler.rs  diagnostic.rs  generator.rs  handlers.rs  ir.rs  lexer.rs  mod.rs  parser.rs  span.rs  tokens.rs
src/emulation/: cpu.rs  interactive_state.rs  memory.rs  mod.rs  program_counter.rs
src/tests/: bitwise_logic.rs  halt_and_nop.rs  lab_and_pc.rs  lih.rs  logic_is_hard.rs  mod.rs  nxor_and_xor.rs  or_and_nor.rs  shift_and_rotate.rs
src/tests/lih/: equal.rs  mod.rs  not_equal.rs
