[package]
name = "dianac"
version = "0.2.0"
edition = "2021"
description = "An emulator, compiler, and interpreter for the Diana Compiled Language"

readme = "README.md"

authors = ["Owen Friedman <5-pebble@protonmail.com>"]
repository = "https://github.com/5-pebbles/dianac"
homepage = "https://github.com/5-pebbles/dianac"

license = "GPL-3.0"

[dependencies]
arbitrary-int = "1.2.7"
bimap = "0.6.3"
bitbybit = "1.3.2"
clap = { version = "4.5.13", features = ["derive"] }
colored = "2.1.0"
strum = { version = "0.26.3", features = ["derive"] }
